error.txt
haris@haris-desktop:~/celestial-nav/build$ cmake --build .
[ 12%] Building CXX object CMakeFiles/celestial_nav.dir/src/main.cpp.o
[ 25%] Building CXX object CMakeFiles/celestial_nav.dir/src/image_acquisition.cpp.o
[ 37%] Building CXX object CMakeFiles/celestial_nav.dir/src/preprocessing.cpp.o
[ 50%] Building CXX object CMakeFiles/celestial_nav.dir/src/star_detection.cpp.o
[ 62%] Building CXX object CMakeFiles/celestial_nav.dir/src/star_matching.cpp.o
[ 75%] Building CXX object CMakeFiles/celestial_nav.dir/src/location_determination.cpp.o
[ 87%] Building CXX object CMakeFiles/celestial_nav.dir/src/user_interface.cpp.o
/home/haris/celestial-nav/src/user_interface.cpp: In member function ‘void UserInterface::run(const std::string&)’:
/home/haris/celestial-nav/src/user_interface.cpp:27:84: error: ‘PI’ was not declared in this scope
   27 |     std::cout << "Estimated User Location (Lat, Lon): (" << location.x() * 180.0 / PI << ", " << location.y() * 180.0 / PI << ")" << std::endl;
      |                                                                                    ^~
gmake[2]: *** [CMakeFiles/celestial_nav.dir/build.make:160: CMakeFiles/celestial_nav.dir/src/user_interface.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:83: CMakeFiles/celestial_nav.dir/all] Error 2
gmake: *** [Makefile:91: all] Error 2
haris@haris-desktop:~/celestial-nav/build$ 
